--- a/papers/Theory/bib.bib
+++ b/papers/Theory/bib.bib
@@ -16,3 +16,12 @@ title = {{Maximally localized Wannier functions: Theory and applications}},
 volume = {84},
 year = {2012}
 }
+
+@article{Kunes2004,
+author = {Kunes, Jan},
+file = {:home/ponet/Documents/Mendeley Desktop//Kuneˇ, Republic - Unknown - Wannier Functions and Construction of Model Hamiltonians s Institute of Physics , Academy of Sciences.pdf:pdf},
+isbn = {9783893367344},
+mendeley-groups = {PhD},
+title = {{Wannier Functions and Construction of Model Hamiltonians}}
+}
+ 
