--- a/papers/Thesis.tex
+++ b/papers/Thesis.tex
@@ -4,6 +4,7 @@
 \usepackage{amsmath,xcolor}
 \usepackage[backend=biber,refsection=chapter]{biblatex}
 \usepackage[margin=30mm]{geometry}
+% \renewcommand{\baselinestretch}{1.5} 
 % \usepackage{cancel}
 \usepackage{siunitx}
 \usepackage{graphicx}
@@ -93,9 +94,9 @@ We utilize both theoretical and computational tools to understand the nature of 
 % \chapter*{Acknowledgements}
 \tableofcontents
 
-\Include{Introduction}
+% \Include{Introduction}
 \Include{Theory}
-\Include{Rashba}
+% \Include{Rashba}
 % \Include{Cr}
 % \Include{GdMn2O5}
 % \Include{Softening}
